COMP7409 Final Demo Version

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 **/node_modules
+**/.idea
+**/.vscode
+**/.DS_Store
+**/__pycache__
+**/.ipynb_checkpoints
+**/*.pptx
+**/*.png
+**/*.pth
+**/*.csv
