--- a/Semester 1/COMP7409A - Machine learning in trading and finance/Debug/config/stock.yaml
+++ b/Semester 1/COMP7409A - Machine learning in trading and finance/Debug/config/stock.yaml
@@ -2,23 +2,29 @@ start_date: '20211115'
 end_date: '20241115'
 
 stock_list:
-  - id: '601857'
-    name: '中国石油'
-  - id: '601988'
-    name: '中国银行'
-  - id: '600030'
-    name: '中信证券'
-  - id: '002415'
-    name: '海康威视'
-  - id: '603019'
-    name: '中科曙光'
-  - id: 002594
-    name: '比亚迪'
-  - id: '600428'
-    name: '中远海特'
-  - id: '600597'
-    name: '光明乳业'
-  - id: '600519'
-    name: '贵州茅台'
-  - id: '002027'
-    name: '分众传媒'
+  # - id: '601857'
+  #   name: '中国石油'
+  # - id: '601988'
+  #   name: '中国银行'
+  # - id: '600030'
+  #   name: '中信证券'
+  # - id: '002415'
+  #   name: '海康威视'
+  # - id: '603019'
+  #   name: '中科曙光'
+  # - id: 002594
+  #   name: '比亚迪'
+  # - id: '600428'
+  #   name: '中远海特'
+  # - id: '600597'
+  #   name: '光明乳业'
+  # - id: '600519'
+  #   name: '贵州茅台'
+  # - id: '002027'
+  #   name: '分众传媒'
+  # - id: '000736'
+  #   name: '中交地产'
+  # - id: '603026'
+  #   name: '石大胜华'
+    - id: '300308'
+      name: '中际旭创'
